<resources>
    <string name="app_name">Kinematic Physics</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="conversions">Conversions</string>
    <string name="kinematics">Kinematics</string>
    <string name="vectors">Vectors</string>
    <string name="moment_of_inertia">Moment of Inertia</string>
    <string name="circular_motion">Circular Motion</string>
    <string name="energy">Energy</string>
    <string name="four_kinematic_equations">The Four Kinematic Equations of Motion</string>
    <string name="complete_known_values">Complete known values (in SI units)</string>
    <string name="acceleration">Acceleration</string>
    <string name="gravity">Gravity</string>
    <string name="initial_x">Initial X</string>
    <string name="final_x">Final X</string>
    <string name="time">Time</string>
    <string name="initial_velocity">Initial velocity</string>
    <string name="final_velocity">Final velocity</string>
    <string name="angle">Angle (with horizontal)</string>
    <string name="calculate">Calculate</string>
    <string name="angle_needed">You must specify a launch angle!</string>
    <string name="projectile">Projectile Motion</string>
    <string name="one_dimensional">One-Dimensional Motion</string>
    <string name="about">About</string>
    <string name="version">Version 1.0</string>
    <string name="developer">Developed by Kevin Lin (klin1344)</string>
    <string name="results">Results</string>
    <string name="m_s">m/s</string>
    <string name="m_s_s">m/s/s</string>
    <string name="meters">meters</string>
    <string name="degrees">degrees</string>
    <string name="seconds">seconds</string>
    <string name="max_height">Maximum Height</string>
    <string name="max_range">Maximum Range</string>
    <string name="launch_angle">Launch Angle</string>
    <string name="help">Help</string>
    <string name="impossible_situation">Impossible situation!</string>
    <string name="not_enough_variables">Not enough variables were entered!</string>
    <string name="help_text">Thank you for downloading Kinematic Physics!  Kinematic Physics
    is a tool to help solve Physics problems relating to motion using the kinematic equations.
    To use the tool, input as much information that you have, using Standard International (SI) units.
    Kinematic Physics will intelligently decide whether or not the situation is possible, if there
    are enough variables to solve the problem, and then select the appropriate equations to solve
    for the rest of the values.  Kinematic Physics can also solve problems involving 2-Dimensional
    projectile motion, if the initial and final height of the projectile are the same.  Remember,
    the kinematic equations can ONLY be used under constant acceleration!  Please use this tool
    responsibly.  This should be a tool to double check solutions, not to do your homework for you.
    Enjoy the app!</string>


</resources>
