<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/four_kinematic_equations"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:id="@+id/kinematicsView1"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/kinematic_equations" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/kinematicsView1"
            android:layout_centerHorizontal="true"
            android:text="@string/complete_known_values"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/checkBox"
            android:paddingTop="15dp"
            android:text="@string/acceleration"
            android:textSize="18dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="8dp"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkBox"
            android:layout_toRightOf="@+id/textView3"
            android:ems="3"
            android:inputType="numberDecimal|numberSigned"
            android:paddingTop="15dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView3"
            android:paddingTop="15dp"
            android:text="@string/initial_x"
            android:textSize="18dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="8dp"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/editText8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:layout_toRightOf="@+id/textView10"
            android:ems="3"
            android:inputType="numberDecimal|numberSigned"
            android:paddingTop="15dp" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:layout_toRightOf="@+id/textView4"
            android:ems="3"
            android:inputType="numberDecimal|numberSigned"
            android:paddingTop="15dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView4"
            android:paddingTop="15dp"
            android:text="@string/time"
            android:layout_marginBottom="8dp"
            android:textSize="18dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView4"
            android:layout_toRightOf="@+id/textView5"
            android:ems="3"
            android:inputType="numberDecimal"
            android:paddingTop="15dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView5"
            android:paddingTop="15dp"
            android:text="@string/initial_velocity"
            android:textSize="18dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="8dp"
            android:textColor="#000000"
            />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView5"
            android:layout_toRightOf="@+id/textView6"
            android:ems="3"
            android:inputType="numberDecimal|numberSigned"
            android:paddingTop="15dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView6"
            android:paddingTop="15dp"
            android:text="@string/final_velocity"
            android:textSize="18dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="8dp"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/editText5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView6"
            android:layout_toRightOf="@+id/textView7"
            android:ems="3"
            android:inputType="numberDecimal|numberSigned"
            android:paddingTop="15dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView7"
            android:paddingTop="15dp"
            android:text="@string/angle"
            android:textSize="18dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="8dp"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/editText6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView7"
            android:layout_toRightOf="@id/textView8"
            android:ems="3"
            android:inputType="numberDecimal"
            android:paddingTop="15dp" />

        <!--
            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:text="@string/calculate" /> -->

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:layout_toRightOf="@id/editText2"
            android:paddingTop="15dp"
            android:text="@string/final_x"
            android:textSize="18dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="8dp"
            android:textColor="#000000"/>


        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_alignParentLeft="true"
            android:onClick="onCheckboxClicked"
            android:text="@string/projectile" />


    </RelativeLayout>
</ScrollView>